fix apis show purchased items
